--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 body {
     margin: 0;
     padding: 0;
+    justify-content: center;
+    overflow-wrap: break-word;
+    overflow-x: hidden;
 }
 
 
@@ -38,42 +41,64 @@ body {
 /* O mnie */
 
 .container {
-    margin-top: 5vh;
+    margin-top: 6vh;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
     width: 100%;
-    height: 300;
+    height: auto;
     background-color: #FFF;
     justify-items: center;
+    align-content: center;
+    grid-gap: 20px;
+    padding-bottom: 15px;
 }
 
-.child {
-    padding: 20px;
-    vertical-align: middle;
+.photo {
+    width: auto;
+    height: 250px;
+    margin: 20px;
+}
+
+.fab {
+    margin-left: 20px;
+    padding: 5px;
 }
 
 .photo>img {
-    width: 100%;
-    height: 200px;
+    width: auto;
+    height: 250px;
+}
+
+.about {
+    margin: 0 8px;
 }
 
 
 /* Folio */
 
 .examples {
-    margin-top: 50px;
-    display: flex;
-    flex-direction: column;
-    height: 400;
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    margin-top: auto;
     width: 100%;
-    background: linear-gradient( #111, #444);
-    color: #FFF;
+    /* color: #FFF; */
+    /* background: linear-gradient( #111, #444); */
+    margin-right: 0;
+    padding-right: 0;
+    text-align: center;
 }
 
 .left {
     padding: 20px;
     text-align: center;
-    width: 100%;
+    width: 200px;
+    height: 100%;
+}
+
+.test img {
+    width: 200px;
+    height: 100%;
 }
 
 .description {
@@ -86,12 +111,18 @@ body {
     text-transform: uppercase;
 }
 
-.red {
-    position: relative;
+
+/* Footer */
+
+.footer {
+    background: linear-gradient( #111, #444);
+    color: #FFF;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-align: center;
+    /* width: 100%; */
     display: flex;
-    padding: 20px;
+    justify-content: center;
+    justify-self: center;
     bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: red;
 }
