--- a/dev-assets/_index.scss
+++ b/dev-assets/_index.scss
@@ -37,6 +37,7 @@
             position: fixed;
             height: 100%;
             overflow: auto;
+            border-right: 2px solid $hover-color;
             h1 {
                 display: flex;
                 text-align: center;
@@ -99,9 +100,11 @@
     
     .fab {
         padding: 8px;
+        margin-right: 2px;
         background-color: $hover-color;
         color: $text;
         transition: ease-in-out 300ms;
+        border-radius: 50%;
         &:hover {
             transform: scale(1.2);
         }
