--- a/dev-assets/_index.scss
+++ b/dev-assets/_index.scss
@@ -172,4 +172,7 @@
     //CV
     .cv {
         margin-bottom: 20px;
+        @include for-phone-only {
+            display: none;
+        }
     }
