--- a/dev-assets/_global.scss
+++ b/dev-assets/_global.scss
@@ -9,9 +9,9 @@
     margin: 0;
     background-color: $bg-color;
     color: $text;
-    font-family: 'Crimson Text', serif;
+    font-family: 'Exo', sans-serif;
 }
 
 h2 {
-    font-family: 'Akronim', cursive;
+    font-family: 'Exo', sans-serif;
 }
