--- a/dev-assets/_index.scss
+++ b/dev-assets/_index.scss
@@ -47,7 +47,7 @@
                 transition: ease-in-out 300ms;
                 &:hover {
                     transform: scale(1.2);
-                    color: $hover-color;
+                    color: $text;
                 }
             }
             .my-photo {
@@ -71,14 +71,9 @@
         padding: 8px 16px;
         text-decoration: none;
         font-size: $font-size-3;
-        &:active,
-        &:focus {
-            background: $main-gradient;
-            color: $text;
-        }
         &:hover {
-            background-color: $hover-color;
-            color: $text;
+            background-color: $text;
+            color: $hover-color;
         }
     }
     
