--- a/dev-assets/_index.scss
+++ b/dev-assets/_index.scss
@@ -38,11 +38,11 @@
             height: 100%;
             overflow: auto;
             border-right: 2px solid $hover-color;
-            h1 {
+            h2 {
                 display: flex;
                 text-align: center;
                 justify-content: center;
-                font-size: $font-size-1;
+                font-size: $font-size-2;
                 font-style: italic;
                 transition: ease-in-out 300ms;
                 &:hover {
@@ -60,6 +60,20 @@
                 border-radius: 50%;
                 &:hover {
                     box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
+                }
+            }
+            .nav-grid {
+                display: flex;
+                position: relative;
+                justify-content: center;
+                text-align: center;
+                justify-items: center;
+                .fab {
+                    &:hover {
+                        transform: scale(1.2);
+                        background-color: $text;
+                        color: $hover-color;
+                    }
                 }
             }
         }
