--- a/dev-assets/_global.scss
+++ b/dev-assets/_global.scss
@@ -8,7 +8,7 @@
 .body {
     margin: 0;
     background-color: $bg-color;
-    color: $text;
+    color: $hover-color;
     font-family: 'Exo', sans-serif;
 }
 
