--- a/dev-assets/_variables.scss
+++ b/dev-assets/_variables.scss
@@ -1,8 +1,8 @@
 //Main colors
-$bg-color: #111;
+$bg-color: rgb(23, 35, 61);
 $nav-color: #333;
-$hover-color: rgb(191, 0, 171);
-$accent-color: rgb(140, 29, 177);
+$hover-color: rgb(210, 207, 202);
+$accent-color: rgb(220, 174, 177);
 $accent-light: rgb(181, 79, 236);
 $text: #FFF;
 //Gradients
