--- a/dev-assets/_contact.scss
+++ b/dev-assets/_contact.scss
@@ -5,9 +5,9 @@
     .btn {
         margin-top: 20px;
         text-decoration: none;
-        color: $text;
+        color: $bg-color;
         padding: 8px 12px;
-        background: $main-gradient;
+        background: $accent-color;
         border-radius: 5px;
     }
     
