--- a/dev-assets/_index.scss
+++ b/dev-assets/_index.scss
@@ -147,7 +147,7 @@
     
     .img-p {
         width: 250px;
-        height: auto;
+        height: 250px;
         &:hover {
             -webkit-transform: rotate(-7deg);
             -moz-transform: rotate(-7deg);
