--- a/dev-assets/_gallery.scss
+++ b/dev-assets/_gallery.scss
@@ -14,6 +14,7 @@
 
 .mySlides {
     display: none;
+    width: 50vw;
 }
 
 
@@ -93,6 +94,20 @@
     width: 16.66%;
 }
 
+.demo.cursor {
+    width: 10vw;
+    height: 10vh;
+    // @media for-desktop-up {
+    //     width: 200px;
+    //     height: 200px;
+    // }
+}
+
+.slide {
+    width: 80vw;
+    height: 80vh;
+}
+
 
 /* Add a transparency effect for thumnbail images */
 
@@ -103,4 +118,8 @@
 .active,
 .demo:hover {
     opacity: 1;
+}
+
+.gg-container {
+    transform: translateY(20vh);
 }
