--- a/dev-assets/_index.scss
+++ b/dev-assets/_index.scss
@@ -43,7 +43,6 @@
             position: fixed;
             height: 100%;
             overflow: auto;
-            // border-right: 5px solid $hover-color;
             h2 {
                 color: $bg-color;
                 display: flex;
@@ -81,6 +80,18 @@
                         background-color: $text;
                         color: $bg-color;
                     }
+                    @include for-desktop-up {
+                        display: flex;
+                        padding: 8px;
+                        margin-right: 2px;
+                        background-color: $bg-color;
+                        color: $text;
+                        transition: ease-in-out 300ms;
+                        border-radius: 50%;
+                        &:hover {
+                            transform: scale(1.2);
+                        }
+                    }
                 }
             }
         }
@@ -112,20 +123,6 @@
         h2 {
             font-size: $font-size-1;
             font-style: italic;
-        }
-    }
-    
-    .contact-nav {
-        @include for-desktop-up {
-            padding: 8px;
-            margin-right: 2px;
-            background-color: $bg-color;
-            color: $text;
-            transition: ease-in-out 300ms;
-            border-radius: 50%;
-            &:hover {
-                transform: scale(1.2);
-            }
         }
     }
     /* Folio */
@@ -160,19 +157,13 @@
     
     //For mobile
     .for-mobile {
-        display: block;
-        position: relative;
+        display: flex;
         flex-direction: column;
+        position: relative;
         max-width: 100vw;
         justify-content: center;
-        img {
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-        }
+        align-items: center;
         .my-photo {
-            justify-content: center;
-            align-items: center;
             margin-top: 20px;
             margin-left: 2vw;
             width: 250px;
